# jp-k2csv

./: .gitignore  1.txt  README.md  README.notes  brittany.conf  causative-alt.yaml  causative-passive-alt.yaml  causative.yaml  conjugations.txt  ex.yaml  final.yaml  gen_anki_filter.hs  imp-vol.yaml  join.txt  k2csv.cabal  kana.txt  package.yaml  passive.yaml  stack.yaml  taru-tiru.yaml  test-tr.yaml  test.yaml  test2.yaml  testf.yaml  testh.yaml  testi.yaml  testp.yaml  testv.yaml  trans.yaml  verb-forms.yaml  words-mnn.txt
app/: Main.hs  random-nums.hs  split-conj.hs  verb-forms.hs
src/: Lib.hs  table-parsing-variants.hs
src/Sgf/: Jp.hs
src/Sgf/Data/Text/: OldTable.hs  Parse.hs  Table.hs
src/Sgf/Data/Text/Table/: Parse.hs
src/Sgf/JPWords/: Checks.hs
src/Sgf/Jp/: Types.hs  VForms.hs
src/Sgf/Jp/Types/: VForms.hs
test/: Spec.hs  table.txt
